# benchmark-video

./: .env.deploy.example  .gitignore  AGENTS.md  DEPLOY.md  README.md  docker-compose.deploy.yml  docker-compose.ghcr.yml  docker-compose.single.yml  docker-compose.yml
.github/workflows/: build-cli.yml  build-images.yml  publish-pypi.yml
cli/: README.md  pyproject.toml  requirements.txt
cli/benchmark/: downloader.py  encoder.py  main.py  presets.py  probe.py  reporter.py  system.py  uploader.py
web/: Dockerfile.single
web/backend/: requirements.txt
web/backend/app/: main.py  models.py
web/backend/app/core/: config.py  database.py  security.py
web/backend/app/routers/: leaderboard.py  results.py
web/frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
web/frontend/src/: App.tsx
web/frontend/src/api/: client.ts
web/frontend/src/pages/: CPUComparisonPage.tsx  LeaderboardPage.tsx  ResultDetailPage.tsx  ResultsPage.tsx  SubmitPage.tsx
web/frontend/src/types/: index.ts
